dob error message alignment fix

--- a/styles/fd-styles.css
+++ b/styles/fd-styles.css
@@ -77,18 +77,6 @@ main .section.form-container {
       .field-bannerimagepanel {
           background: var(--color-interface-fd-background-secondary) url('../icons/side_bar_banner.png') no-repeat center center / cover;
           min-height: 648px;
-  
-          /* .field-bannerimagefdlien {
-              background: url('../icons/side_bar_banner.png');
-              display: flex;
-              align-items: flex-end;
-          }
-  
-          .field-bannerimagefdlien picture,
-          .field-bannerimagefdlien img {
-              max-width: 100%;
-              height: 100%;
-          } */
       }
 
       .field-loginmainpanel {
@@ -348,6 +336,14 @@ main .section.form-container {
       }
 
   }    
+}
+
+.fdlien .field-loginpanel:has(.field-identifierpanel .field-dateofbirth .field-description) {
+    .field-mobilepanel {
+        .field-countrycode, .field-registeredmobilenumber {
+            margin-bottom: 21px !important;
+        }
+    }
 }
 
 /* Multiple Customer Id  */
